--- a/src/apps/1688Admin/components/email/index.styl
+++ b/src/apps/1688Admin/components/email/index.styl
@@ -65,24 +65,12 @@ EMAIL_MBTN_HEIGHT = 0.34rem
 .email-right-content
     display block
     position absolute
+    overflow auto
     top 0
     right 0
     bottom 0
     left EMAIL_LEFT_WIDTH
     padding 0.1rem
-
-.email-title
-    display block
-    width auto
-    height 0.4rem
-    line-height 0.4rem
-    overflow hidden
-    background-color WHITE
-    font-size 0.18rem
-    padding-left 0.1rem
-    color THEME_COLOR
-    position relative
-    border-left 2px solid THEME_COLOR
 
 .btn-email
     background-color WHITE
@@ -98,3 +86,18 @@ EMAIL_MBTN_HEIGHT = 0.34rem
         background-color WHITE
         color GRAY_99
         opacity 0.5
+
+.email-title
+    color GRAY_33
+    font-size 0.22rem
+    display block
+.email-info-label
+    color GRAY_66
+    font-size 0.14rem
+    display inline-block
+.email-info-content
+    color GRAY_33
+    font-size 0.14rem
+    display inline-block
+.mail-appendix-title
+    margin-top 0.2rem
