--- a/src/apps/1688Admin/webapp/oa-personal-email-send.pug
+++ b/src/apps/1688Admin/webapp/oa-personal-email-send.pug
@@ -25,11 +25,11 @@ html
                 i.fa.fa-pencil-square
                 |&nbsp;写邮件
             ul.nav.nav-tabs.email-menu-tabs
-                li.active
+                li
                     a(href="oa-personal-email.html")
                         i.fa.fa-envelope-open
                         |&nbsp;收件箱
-                li
+                li.active
                     a(href='oa-personal-email-send.html')
                         i.fa.fa-send
                         |&nbsp;已发送
@@ -47,7 +47,7 @@ html
                     .col-xs-12
                         .section-title
                             .section-title-icon
-                            .section-title-text(style="background-color:#f7f8fa;") 收件箱
+                            .section-title-text(style="background-color:#f7f8fa;") 已发送
                     .col-xs-12
                         .toolbar#toolbar1
                             .btn.btn-theme#toolbtn1_remove
@@ -67,7 +67,7 @@ html
         script(src=JS_DIR + 'BSModal.js')
         script(src=JS_DIR + 'common.js')
         script(src=JS_DIR + 'app.js')
-        script(src=JS_DIR + 'oa-personal-email.js')
+        script(src=JS_DIR + 'oa-personal-email-send.js')
 
     
         
