--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -229,5 +229,5 @@ for i in (1..10)
 @require '../../components/resource-orgpreview/index'
 @require '../../components/footer/index'
 @require '../../components/email/index'
-
+@require '../../components/platform/index'
 @require 'oa-stuff'
