--- a/src/apps/1688Web/webapp/chuangye-teacher-detail.pug
+++ b/src/apps/1688Web/webapp/chuangye-teacher-detail.pug
@@ -44,6 +44,27 @@ block content
                                 .col-xs-12
                                     .section-title
                                         .section-title-icon
+                                        .section-title-text.bg-white 导师资质
+                                    .row
+                                        .col-xs-12.col-sm-6.col-md-4
+                                            .abs-container.abs-hp-2of3
+                                                .abs-content
+                                                    img(src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1514350276820&di=5a3aa2685b7ab507a8e2b5a01739ac95&imgtype=jpg&src=http%3A%2F%2Fimg3.imgtn.bdimg.com%2Fit%2Fu%3D101492773%2C84824841%26fm%3D214%26gp%3D0.jpg")
+                                        .col-xs-12.col-sm-6.col-md-4
+                                            .abs-container.abs-hp-2of3
+                                                .abs-content
+                                                    img(src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1514350276820&di=5a3aa2685b7ab507a8e2b5a01739ac95&imgtype=jpg&src=http%3A%2F%2Fimg3.imgtn.bdimg.com%2Fit%2Fu%3D101492773%2C84824841%26fm%3D214%26gp%3D0.jpg")
+                                        .col-xs-12.col-sm-6.col-md-4
+                                            .abs-container.abs-hp-2of3
+                                                .abs-content
+                                                    img(src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1514350276820&di=5a3aa2685b7ab507a8e2b5a01739ac95&imgtype=jpg&src=http%3A%2F%2Fimg3.imgtn.bdimg.com%2Fit%2Fu%3D101492773%2C84824841%26fm%3D214%26gp%3D0.jpg")
+                                        .col-xs-12.col-sm-6.col-md-4
+                                            .abs-container.abs-hp-2of3
+                                                .abs-content
+                                                    img(src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1514350276820&di=5a3aa2685b7ab507a8e2b5a01739ac95&imgtype=jpg&src=http%3A%2F%2Fimg3.imgtn.bdimg.com%2Fit%2Fu%3D101492773%2C84824841%26fm%3D214%26gp%3D0.jpg")
+                                .col-xs-12
+                                    .section-title
+                                        .section-title-icon
                                         .section-title-text.bg-white 导师详情
                                     .article-content
                                         p 导师详情文章内容
