--- a/src/apps/1688Web/webapp/m-approval-hall.pug
+++ b/src/apps/1688Web/webapp/m-approval-hall.pug
@@ -71,59 +71,6 @@ block content
                                         input.form-control(type="text" id="time_start" name="time_start")
                                         .input-group-addon.btn.btn-line
                                             i.fa.fa-calendar
-                            .col-xs-12#start_hour_selector
-                                .row
-                                    .col-xs-12
-                                        .just-label 请选择开始日期当天的开始时间
-                                .row#start_hour_btns
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 00:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 01:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 02:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 03:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 04:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 05:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 06:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 07:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 08:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 09:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 10:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 11:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 12:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 13:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 14:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 15:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 16:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 17:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 18:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 19:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 20:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 21:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 22:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 23:00
                             .col-xs-12
                                 .form-group.cool-form-group
                                     .cool-form-label.text-right.control-label 结束日期：
@@ -131,59 +78,6 @@ block content
                                         input.form-control(type="text" id="time_end" name="time_end")
                                         .input-group-addon.btn.btn-line
                                             i.fa.fa-calendar
-                            .col-xs-12#end_hour_selector
-                                .row
-                                    .col-xs-12
-                                        .just-label 请选择结束日期当天的结束时间
-                                .row#end_hour_btns
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 00:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 01:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 02:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 03:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 04:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 05:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 06:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 07:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 08:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 09:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 10:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 11:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 12:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 13:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 14:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 15:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 16:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 17:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 18:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 19:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 20:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 21:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 22:00
-                                    .col-xs-3
-                                        .btn.btn-hour.btn-block 23:00
                             .col-xs-12
                                 .form-group.cool-form-group
                                     .cool-form-label.text-right.control-label 展厅时间段：
@@ -217,6 +111,7 @@ block content
 
 block js
     script(src=JS_DIR + 'jquery.min.js')
+    script(src=JS_DIR + 'underscore-min.js')
     script(src=JS_DIR + 'bootstrap.min.js')
     script(src=JS_DIR + 'iCheck/icheck.min.js')
     script(src=JS_DIR + 'bootstrapvalidator/bootstrapValidator.min.js')
