--- a/src/apps/1688Web/webapp/personal-notice.pug
+++ b/src/apps/1688Web/webapp/personal-notice.pug
@@ -59,13 +59,21 @@ block content
                                         .tab-pane.active.row-space-10#tab_1( role="tabpanel")
                                             ul.news-list.underline-list.dot-list.with-date
                                                 li
-                                                    a.touch-active(href='personal-notice-article.html' target='_blank') 
-                                                        |印尼将出动军队打击毒品犯罪印尼将出动军队打击毒品犯罪
+                                                    a.touch-active(href='personal-notice-企业诉求.html' target='_blank') 
+                                                        span.font-green-grass [企业诉求]
+                                                        |&nbsp;园区回复了您的企业诉求，请点击查看详情
                                                         span.font-red-intense &nbsp;[未读]
                                                     .date 2018.06.23
                                                 li
-                                                    a.touch-active(href='personal-notice-article.html' target='_blank') 
-                                                        |官方称翻越澳门大学新校区围墙属偷渡行为
+                                                    a.touch-active(href='personal-notice-申请入驻.html' target='_blank') 
+                                                        span.font-green-grass [申请入驻]
+                                                        |&nbsp;您的入驻申请已通过，请看详情
+                                                        span.font-red-intense &nbsp;[未读]
+                                                    .date 2018.06.21
+                                                li
+                                                    a.touch-active(href='personal-notice-第三方服务申请.html' target='_blank') 
+                                                        span.font-green-grass [第三方服务申请]
+                                                        |&nbsp;您的第三方服务申请已通过，请看详情
                                                         span.font-red-intense &nbsp;[未读]
                                                     .date 2018.06.21
                                         .tab-pane.row-space-10#tab_2( role="tabpanel")
