--- a/src/apps/1688Admin/webapp/oa-personal-email-trash.pug
+++ b/src/apps/1688Admin/webapp/oa-personal-email-trash.pug
@@ -25,7 +25,7 @@ html
                 i.fa.fa-pencil-square
                 |&nbsp;写邮件
             ul.nav.nav-tabs.email-menu-tabs
-                li.active
+                li
                     a(href="oa-personal-email.html")
                         i.fa.fa-envelope-open
                         |&nbsp;收件箱
@@ -37,7 +37,7 @@ html
                     a(href='oa-personal-email-draft.html')
                         i.fa.fa-file-text
                         |&nbsp;草稿箱
-                li
+                li.active
                     a(href='oa-personal-email-trash.html')
                         i.fa.fa-trash
                         |&nbsp;回收站
@@ -47,12 +47,15 @@ html
                     .col-xs-12
                         .section-title
                             .section-title-icon
-                            .section-title-text(style="background-color:#f7f8fa;") 收件箱
+                            .section-title-text(style="background-color:#f7f8fa;") 回收站
                     .col-xs-12
                         .toolbar#toolbar1
+                            .btn.btn-theme#toolbtn1_recover
+                                i.fa.fa-mail-reply-all
+                                |&nbsp;还原
                             .btn.btn-theme#toolbtn1_remove
                                 i.fa.fa-remove
-                                |&nbsp;删除
+                                |&nbsp;彻底删除
                         table#table1
         
         script(src=JS_DIR + 'jquery.min.js')
@@ -67,7 +70,7 @@ html
         script(src=JS_DIR + 'BSModal.js')
         script(src=JS_DIR + 'common.js')
         script(src=JS_DIR + 'app.js')
-        script(src=JS_DIR + 'oa-personal-email.js')
+        script(src=JS_DIR + 'oa-personal-email-trash.js')
 
     
         
